feat(data-537): when adding FM to cache, compute its checksum and check if it is already in cache, when the same checksum is already in cache do not add FM to cache